--- a/.github/workflows/aws.yaml
+++ b/.github/workflows/aws.yaml
@@ -8,7 +8,7 @@ env:
   AWS_REGION: eu-west-3                   # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: mlops1           # set this to your Amazon ECR repository name
   ECS_SERVICE: ml_catboost_s                 # set this to your Amazon ECS service name
-  ECS_CLUSTER: MlopsCluster                 # set this to your Amazon ECS cluster name
+  ECS_CLUSTER: MLopsCluster                 # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: mlops_catboost # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
   CONTAINER_NAME: mlops_catboost           # set this to the name of the container in the
